Fix home page spacing

--- a/styles/_facebook.scss
+++ b/styles/_facebook.scss
@@ -1,5 +1,5 @@
 .fb-page {
-  margin-top: 0.5em;
+  margin-top: 1em;
 
   @media (min-width: breakpoint(small)) {
     float: right;
